(executables
  (names test_naive1 handlers eff_test test_naive2 simple test3 test_interrupt_hook)
  (libraries unix preempt))                                                                                                                                                                                        
